--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,5 +1,53 @@
 .hero {
   position: relative;
-  background-color: aquamarine;
-  padding-top: 150px;
+  background-image: linear-gradient(47deg, #6b3c03 0%, #ecd55a 100%);
+  padding-top: 80px;
+  padding-bottom: 212px;
+  border-radius: 0 0 16px 16px;
+  margin-bottom: 43px;
+}
+
+.hero__container:after {
+  content: "";
+  position: absolute;
+  bottom: -43px;
+  z-index: 2;
+  width: calc(100vw / (320 / 261));
+  height: calc(100vw / (320 / 230));
+  background-repeat: no-repeat;
+  background-image: url(../img/logo.png);
+  background-size: contain;
+  right: calc(var(--offset-container) + 7px);
+  max-width: 380px;
+  max-height: 340px;
+}
+
+.hero__content {
+  position: relative;
+  z-index: 4;
+  max-width: 300px;
+}
+.hero__title {
+  font-weight: 800;
+  font-size: 38px;
+  line-height: 1;
+  color: var(--dark);
+  margin-bottom: 12px;
+}
+.hero__tagline {
+  font-size: 14px;
+  color: var(--dark);
+  margin-bottom: 20px;
+  background-image: url(../img/deliverypizza.svg);
+  background-repeat: no-repeat;
+  background-position: left;
+  padding-left: 30px;
+}
+.hero__order {
+  border-radius: 30px;
+  padding: 10px 22px;
+  background-color: var(--light);
+  color: var(--orange);
+  font-size: 14px;
+  font-weight: 600;
 }
