--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,10 +1,12 @@
 .hero {
-  position: relative;
   background-image: linear-gradient(47deg, #6b3c03 0%, #ecd55a 100%);
-  padding-top: 80px;
-  padding-bottom: 212px;
   border-radius: 0 0 16px 16px;
   margin-bottom: 43px;
+}
+.hero__container {
+  position: relative;
+  padding-top: 80px;
+  padding-bottom: 212px;
 }
 
 .hero__container:after {
