--- a/styles/card.css
+++ b/styles/card.css
@@ -1,16 +1,48 @@
 .card {
+  position: relative;
+  padding-top: 34px;
 }
 .card__image {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
 }
 .card__content {
+  background: var(--white);
+  padding: 50px 10px 10px;
+  border-radius: 14px;
 }
 .card__title {
+  font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+  color: var(--dark);
 }
 .card__info {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  color: var(--beige);
 }
 .card__price {
+  font-weight: 600;
+  color: var(--dark);
+  margin-bottom: 18px;
 }
 .card__weight {
 }
 .card__button {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 1.25;
+  color: var(--orange);
+  border: 1px solid var(--orange);
+  padding: 8px 20px;
+  border-radius: 30px;
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
 }
