--- a/styles/header.css
+++ b/styles/header.css
@@ -22,3 +22,13 @@
 .header__cart:hover {
   color: var(--orange);
 }
+
+@media (width >= 540px) {
+  .header {
+    top: 42px;
+  }
+
+  .header__logo {
+    width: 100%;
+  }
+}
