--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   font-size: 16px;
   color: var(--dark);
-  background-color: var(--light);
+  background-color: rgb(239, 229, 173);
   font-weight: 400;
 }
 
@@ -84,18 +84,31 @@ iframe {
 --offset-container: 14px
   max-width: calc(var(--offset-container) * 2 + 1300px);
   padding: 0 var(--offset-container);
-  margin: 0 auto;
+  margin: 0 20px;
+  align-items: center;
+  justify-content: center;
 }
 
 .svg-sprite{
     display: none;
 }
 
-@media (width >= 540px) {
+@media (width >= 650px) {
   body{
     background-color: rgb(243, 202, 150);
   }
   .container{
     --offset-container: 40px
   }
+}
+
+@media (width >= 860px) {
+
+}
+
+@media (width >= 1140px) {
+  .container{
+    --offset-container: 70px
+  }
+
 }
