--- a/styles/card.css
+++ b/styles/card.css
@@ -48,3 +48,26 @@
   width: 100%;
   transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
 }
+
+@media (width >= 650px) {
+  .card {
+    padding-top: 46px;
+  }
+  .card__image {
+    width: 180px;
+  }
+  .card__content {
+    padding: 46px 24px 24px;
+    border-radius: 30px;
+  }
+  .card__title {
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
+}
+
+@media (width >= 860px) {
+}
+
+@media (width >= 1140px) {
+}
