--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   padding-top: 70px;
-  background-image: linear-gradient(47deg, #6b3c03 0%, #ecd55a 100%);
+  background-image: linear-gradient(47deg, #8b4e03 0%, #e6d261 100%);
   border-radius: 0 0 16px 16px;
   margin-bottom: 43px;
   padding-bottom: 45px;
@@ -10,6 +10,7 @@
 .hero__container:after {
   content: "";
   position: absolute;
+  top: 10px;
   bottom: -43px;
   z-index: 2;
   width: calc(100vw / (320 / 261));
@@ -17,7 +18,7 @@
   background-repeat: no-repeat;
   background-image: url(/img/logo.png);
   background-size: contain;
-  right: calc(var(--offset-container) + 7px);
+  right: calc(var(--offset-container) + 17px);
   max-width: 380px;
   max-height: 340px;
 }
@@ -36,20 +37,90 @@
 }
 .hero__tagline {
   font-size: 14px;
-  color: var(--dark);
+  color: var(--beige);
   margin-bottom: 20px;
   background-image: url(../img/deliverypizza.svg);
   background-repeat: no-repeat;
   background-position: left;
   padding-left: 30px;
+  font-style: italic;
 }
 .hero__order {
-  border-radius: 30px;
+  border-radius: 50px;
   padding: 10px 22px;
-  background-color: var(--light);
-  color: var(--orange);
-  font-size: 14px;
+  background-color: transparent;
+  border: 2px solid var(--orange);
+  color: var(--dark);
+  font-size: 18px;
   font-weight: 600;
 }
-@media (width >= 540px) {
+
+@media (width >= 650px) {
+  .hero {
+    padding: 116px 0 90px;
+    border-radius: 0 0 32px 32px;
+    margin-bottom: 62px;
+  }
+  .hero__content {
+    max-width: 550px;
+  }
+  .hero__title {
+    font-size: 66px;
+    margin-bottom: 22px;
+  }
+  .hero__tagline {
+    font-size: 20px;
+    margin-bottom: 46px;
+  }
+  .hero__order {
+    font-size: 22px;
+  }
+  .hero__container:after {
+    bottom: -60px;
+    right: calc(var(--offset-container) + 10px);
+    max-width: 380px;
+    max-height: 340px;
+  }
+}
+
+@media (width >= 860px) {
+  .hero {
+    padding: 126px 0 80px;
+    margin-bottom: 80px;
+  }
+  .hero__content {
+    max-width: 550px;
+  }
+  .hero__container:after {
+    bottom: -80px;
+    right: calc(var(--offset-container) - 7px);
+    max-width: 600px;
+    max-height: 540px;
+  }
+}
+
+@media (width >= 1140px) {
+  .hero {
+    padding: 140px 0 100px;
+    margin-bottom: 86px;
+  }
+  .hero__content {
+    max-width: 630px;
+  }
+  .hero__title {
+    font-size: 64px;
+    margin-bottom: 20px;
+  }
+  .hero__tagline {
+    margin-bottom: 64px;
+  }
+  .hero__order {
+    font-size: 20px;
+  }
+  .hero__container:after {
+    bottom: -75px;
+    right: calc(var(--offset-container) + 32px);
+    max-width: 670px;
+    max-height: 570px;
+  }
 }
