--- a/styles/pizza.css
+++ b/styles/pizza.css
@@ -14,3 +14,21 @@
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   gap: 10px;
 }
+@media (width >= 650px) {
+  .pizza {
+    padding: 64px 0;
+  }
+  .pizza__title {
+    font-size: 46px;
+  }
+  .pizza__list {
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 14px;
+  }
+}
+
+@media (width >= 1140px) {
+  .pizza__list {
+    gap: 20px;
+  }
+}
