--- a/styles/pizza.css
+++ b/styles/pizza.css
@@ -14,6 +14,13 @@
   grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
   gap: 10px;
 }
+.pizza__item {
+  display: flex;
+  flex-direction: column;
+}
+.pizza__card {
+  flex-grow: 1;
+}
 @media (width >= 650px) {
   .pizza {
     padding: 64px 0;
