--- a/styles/default.css
+++ b/styles/default.css
@@ -5,3 +5,5 @@
 @import "/styles/pizza.css";
 @import "/styles/card.css";
 @import "/styles/footer.css";
+@import "/styles/loader.css";
+@import "/styles/modal.css";
