--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,10 +1,13 @@
 .hero {
-  position: relative;
-  padding-top: 70px;
   background-image: linear-gradient(47deg, #8b4e03 0%, #e6d261 100%);
   border-radius: 0 0 16px 16px;
   margin-bottom: 43px;
-  padding-bottom: 45px;
+}
+
+.hero__container {
+  position: relative;
+  padding-top: 70px;
+  padding-bottom: 200px;
 }
 
 .hero__container:after {
@@ -57,9 +60,12 @@
 
 @media (width >= 650px) {
   .hero {
-    padding: 116px 0 90px;
     border-radius: 0 0 32px 32px;
     margin-bottom: 62px;
+  }
+  .hero__container {
+    padding-top: 116px;
+    padding-bottom: 90px;
   }
   .hero__content {
     max-width: 550px;
@@ -85,8 +91,11 @@
 
 @media (width >= 860px) {
   .hero {
-    padding: 126px 0 80px;
     margin-bottom: 80px;
+  }
+  .hero__container {
+    padding-top: 126px;
+    padding-bottom: 80px;
   }
   .hero__content {
     max-width: 550px;
@@ -101,8 +110,11 @@
 
 @media (width >= 1140px) {
   .hero {
-    padding: 140px 0 100px;
     margin-bottom: 86px;
+  }
+  .hero__container {
+    padding-top: 140px;
+    padding-bottom: 100px;
   }
   .hero__content {
     max-width: 630px;
