--- a/styles/pizza.css
+++ b/styles/pizza.css
@@ -11,7 +11,7 @@
 }
 .pizza__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
   gap: 10px;
 }
 .pizza__item {
@@ -29,7 +29,7 @@
     font-size: 46px;
   }
   .pizza__list {
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 14px;
   }
 }
