--- a/styles/pizza.css
+++ b/styles/pizza.css
@@ -21,6 +21,29 @@
 .pizza__card {
   flex-grow: 1;
 }
+.pizza__reset-toppings {
+  border-radius: 32px;
+  padding: 8px 24px;
+  background: var(--orange);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.4;
+  color: var(--white);
+  border: 1px solid transparent;
+  outline: none;
+}
+
+.pizza__reset-toppings:focus-visible {
+  background-color: var(--white);
+  color: var(--orange);
+  border-color: var(--orange);
+}
+
+.pizza__reset-toppings:hover {
+  background-color: var(--white);
+  color: var(--orange);
+}
+
 @media (width >= 650px) {
   .pizza {
     padding: 64px 0;
@@ -31,6 +54,9 @@
   .pizza__list {
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 14px;
+  }
+  .pizza__reset-toppings {
+    font-size: 20px;
   }
 }
 
