--- a/styles/modal-pizza.css
+++ b/styles/modal-pizza.css
@@ -1,6 +1,7 @@
 .modal-pizza__main {
   position: relative;
   max-width: 290px;
+  width: 100%;
   padding: 24px 16px 16px;
 }
 .modal__image {
@@ -55,6 +56,7 @@
   padding: 10px;
   border-radius: 30px;
   font-size: 14px;
+  line-height: 1.25;
   color: var(--beige);
   cursor: pointer;
   border: 1px solid transparent;
@@ -122,6 +124,24 @@
 }
 
 @media (width >= 650px) {
+  .modal-pizza__main {
+    max-width: 368px;
+  }
+  .modal__title {
+    font-size: 22px;
+  }
+  .modal__description {
+    font-size: 20px;
+  }
+  .modal__info {
+    font-size: 20px;
+  }
+  .modal-pizza__label {
+    font-size: 16px;
+  }
+  .modal__button {
+    font-size: 20px;
+  }
 }
 
 @media (width >= 860px) {
